--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "clear",
+    "name": "tutorial-google",
     "slug": "tutorial-google",
     "version": "1.0.0",
     "orientation": "portrait",
