--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "expo-auth-session": "~5.0.2",
-    "expo-crypto": "~12.4.1",
-    "expo-web-browser": "~12.3.2",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "expo-splash-screen": "~0.20.5"
+    "@react-native-google-signin/google-signin": "^10.1.0",
+    "expo": "~49.0.15",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
+    "googleapis": "^128.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
